# sd-pro

./: .gitignore  README.md  docker-compose.yml  index.html  package-lock.json
backend/: .gitignore  Dockerfile  README.md  db.sqlite3  docker_build.sh  manage.py  pyproject.toml
backend/bucket/: admin.py  models.py  serializer.py  urls.py  views.py
backend/card/: admin.py  models.py  serializers.py  urls.py  views.py
backend/environment/: admin.py  models.py  serializers.py  urls.py  views.py
backend/fixtures/: about_us.json  about_us_image.json  card.json  category.json  category_tooth_data.json  nav.json  order.json  series.json  tooth.json
backend/information/: admin.py  models.py  serializers.py  urls.py  views.py
backend/news/: admin.py  models.py  serializers.py  urls.py  views.py
backend/order/: admin.py  models.py  urls.py  views.py
backend/sd_pro/: asgi.py  settings.py  urls.py  wsgi.py
backend/utils/: demo_category.py  demo_series.py  demo_tooth.py  list_models.py  slug.py
spider/: cate.py  pyproject.toml  spider.py
spider/json/: tooth-Carter series.json  tooth-Carter312.json  tooth-Carter320.json  tooth-Carter325.json  tooth-Carter330.json  tooth-Carter345.json  tooth-Combination.json  tooth-D series.json  tooth-Daewoo series.json  tooth-Daewoo220.json  tooth-Daewoo280.json  tooth-Daewoo300.json  tooth-Daewoo360.json  tooth-Daewoo500.json  tooth-Hitachi series.json  tooth-Kobelco series.json  tooth-Kobelco200.json  tooth-Kobelco230.json  tooth-Kobelco350.json  tooth-Kobelco60.json  tooth-Komatsu series.json  tooth-Komatsu100.json  (+10 more)
(+186 files in other folders)
